--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ azure_identity = "~0"
 base64 = "~0.21"
 reqwest = { version = "~0", features = ["cookies", "blocking", "json", "rustls-tls"] }
 serde = { version = "~1", features = ["derive"] }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288", features=['json'] }
+serde_json = "~1"
