--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-azure_security_keyvault = "~0"
-azure_identity = "~0"
-base64 = "~0.21"
-reqwest = { version = "~0", features = ["cookies", "blocking", "json", "rustls-tls"] }
-serde = { version = "~1", features = ["derive"] }
+azure_security_keyvault = "*"
+azure_identity = "*"
+base64 = "*"
+reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }
+serde = { version = "*", features = ["derive"] }
 rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "91f6288", features=['json'] }
-serde_json = "~1"
+serde_json = "*"
